--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+.container {
+    width: 100%;
+}
+.upper-bar {
+    background-color: black;
+    width: 100%;
+    height: 200px;
+}
+.bottom-bar {
+    background-color: rgb(34, 34, 34);
+    width: 100%;
+    height: 200px;
+}
