--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,14 +5,40 @@
 }
 .container {
     width: 100%;
+    background-color: black;
 }
 .upper-bar {
     background-color: black;
     width: 100%;
-    height: 200px;
+    height: 50px;
+    margin: auto;
+    z-index: 1;
 }
 .bottom-bar {
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(71, 71, 71);
     width: 100%;
-    height: 200px;
+    height: 50px;
+    margin: auto;
+    z-index: 2;
+}
+.call-participant {
+    height: calc(100vh);
+    width: calc(100% - 100px);
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+    /* DEBUG */
+    background-color: black;
+}
+.participant {
+    width: calc(100%/7 - 10px);
+    height: calc(100vh/5 - 5px);
+}
+.participant img {
+    object-fit: cover;
+    object-position: 50% 50%;
+    width: 100%;
+    height: 100%;
 }
