--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,9 @@
     width: 100%;
     height: 50px;
     margin: auto;
-    z-index: 2;
+    z-index: 1;
+    position: relative;
+    color: white;
 }
 .call-participant {
     height: calc(100vh);
@@ -41,4 +43,24 @@
     object-position: 50% 50%;
     width: 100%;
     height: 100%;
+}
+.left {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translate(0, -50%);
+    font-size: 18px;
+    text-align: center;
+    gap: 10px;
+
+}
+.center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.microphone div, .video div{
+    font-size: 12px;
 }
