--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Lato", sans-serif;
 }
 .container {
     width: 100%;
@@ -15,9 +16,9 @@
     z-index: 1;
 }
 .bottom-bar {
-    background-color: rgb(71, 71, 71);
+    background-color: rgb(53, 52, 52);
     width: 100%;
-    height: 50px;
+    height: 70px;
     margin: auto;
     z-index: 1;
     position: relative;
@@ -36,7 +37,8 @@
 }
 .participant {
     width: calc(100%/7 - 10px);
-    height: calc(100vh/5 - 5px);
+    height: calc(100vh/5 - 13px);
+    position: relative;
 }
 .participant img {
     object-fit: cover;
@@ -48,19 +50,46 @@
     display: flex;
     position: absolute;
     top: 50%;
-    left: 10px;
+    left: 15px;
     transform: translate(0, -50%);
-    font-size: 18px;
+    font-size: 22px;
     text-align: center;
     gap: 10px;
 
 }
 .center {
+    display: flex;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    font-size: 22px;
+    text-align: center;
+    gap: 10px;
 }
-.microphone div, .video div{
-    font-size: 12px;
+.icon div {
+    font-size: 14px;
+}
+.icon a {
+    text-decoration: none;
+    color: white;
+}
+.right {
+    display: flex;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+/*     font-size: 16px; */
+    text-align: center;
+    color: red;
+    padding: 25px 20px;
+    background-color: rgb(71, 71, 71);
+}
+.user {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(156, 156, 156, 0.8);
+    padding: 1px;
 }
