--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,29 @@
     height: 50px;
     margin: auto;
     z-index: 1;
+    color: white;
+    display: flex;
+    position: relative;
+    
+}
+.upper-right {
+    display: flex;
+    position: absolute;
+    gap: 10px;
+    top: 3px;
+    right: 5px;
+}
+.maximize {
+    background-color: rgb(71, 71, 71);
+    padding: 5px;
+    border-radius: 5px;
+}
+.speaker-view {
+    background-color: rgb(71, 71, 71);
+    padding: 5px;
+    border-radius: 5px;
+    display: flex;
+    gap: 10px;
 }
 .bottom-bar {
     background-color: rgb(53, 52, 52);
@@ -21,23 +44,23 @@
     height: 70px;
     margin: auto;
     z-index: 1;
-    position: relative;
+    position: fixed;
+    bottom: 0;
     color: white;
 }
 .call-participant {
-    height: calc(100vh);
+    background-color: black;
     width: calc(100% - 100px);
     margin: 20px auto;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-
-    /* DEBUG */
-    background-color: black;
+    row-gap: 15px;
+    padding-bottom: 60px;
 }
 .participant {
     width: calc(100%/7 - 10px);
-    height: calc(100vh/5 - 13px);
+    height: calc(100vh/5 - 40px);
     position: relative;
 }
 .participant img {
@@ -45,8 +68,9 @@
     object-position: 50% 50%;
     width: 100%;
     height: 100%;
+
 }
-.left {
+.bottom-left {
     display: flex;
     position: absolute;
     top: 50%;
@@ -57,7 +81,7 @@
     gap: 10px;
 
 }
-.center {
+.bottom-center {
     display: flex;
     position: absolute;
     left: 50%;
@@ -74,7 +98,7 @@
     text-decoration: none;
     color: white;
 }
-.right {
+.bottom-right {
     display: flex;
     position: absolute;
     right: 0;
@@ -86,10 +110,14 @@
     padding: 25px 20px;
     background-color: rgb(71, 71, 71);
 }
+.bottom-right a {
+    text-decoration: none;
+}
 .user {
     position: absolute;
     bottom: 0;
     left: 0;
     background-color: rgba(156, 156, 156, 0.8);
     padding: 1px;
+    color: white;
 }
