--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,14 +9,14 @@
     background-color: black;
 }
 .upper-bar {
-    background-color: black;
-    width: 100%;
+/*     background-color: black;
+    width: 100%; */
     height: 50px;
-    margin: auto;
-    z-index: 1;
+/*     margin: auto;
+    z-index: 1; */
     color: white;
-    display: flex;
-    position: relative;
+/*     display: flex;
+    position: relative; */
     
 }
 .upper-right {
@@ -42,14 +42,14 @@
     background-color: rgb(53, 52, 52);
     width: 100%;
     height: 70px;
-    margin: auto;
-    z-index: 1;
+/*     margin: auto;
+    z-index: 1; */
     position: fixed;
     bottom: 0;
     color: white;
 }
 .call-participant {
-    background-color: black;
+/*     background-color: black; */
     width: calc(100% - 100px);
     margin: 20px auto;
     display: flex;
@@ -65,7 +65,7 @@
 }
 .participant img {
     object-fit: cover;
-    object-position: 50% 50%;
+/*     object-position: 50% 50%; */
     width: 100%;
     height: 100%;
 
@@ -95,7 +95,6 @@
     font-size: 14px;
 }
 .icon a {
-    text-decoration: none;
     color: white;
 }
 .bottom-right {
@@ -104,19 +103,18 @@
     right: 0;
     top: 50%;
     transform: translate(0, -50%);
-/*     font-size: 16px; */
     text-align: center;
-    color: red;
     padding: 25px 20px;
     background-color: rgb(71, 71, 71);
 }
 .bottom-right a {
     text-decoration: none;
+    color: red;
 }
 .user {
     position: absolute;
     bottom: 0;
-    left: 0;
+/*     left: 0; */
     background-color: rgba(156, 156, 156, 0.8);
     padding: 1px;
     color: white;
