--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,14 +9,15 @@
     background-color: black;
 }
 .upper-bar {
-/*     background-color: black;
-    width: 100%; */
+    background-color: black;
+    width: 100%;
     height: 50px;
-/*     margin: auto;
-    z-index: 1; */
+    margin: auto;
+    z-index: 1;
     color: white;
-/*     display: flex;
-    position: relative; */
+    display: flex;
+    position: fixed;
+    top: 0;
     
 }
 .upper-right {
@@ -42,8 +43,8 @@
     background-color: rgb(53, 52, 52);
     width: 100%;
     height: 70px;
-/*     margin: auto;
-    z-index: 1; */
+    margin: auto;
+    z-index: 1;
     position: fixed;
     bottom: 0;
     color: white;
@@ -56,7 +57,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     row-gap: 15px;
-    padding-bottom: 60px;
+    padding: 40px 0 60px 0;
 }
 .participant {
     width: calc(100%/7 - 10px);
